--- a/calculator.html
+++ b/calculator.html
@@ -12,6 +12,12 @@
         <div class="container">
             <div class="row">
                 <div class="col">
+                    <button id="clr">C</button>
+                    <button id="sch">+/-</button>
+                    <button id="prc">%</button>
+                    <button id="fun">Funny</button>
+                </div>
+                <div class="col">
                     <button id="seven">7</button>
                     <button id="eight">8</button>
                     <button id="nine">9</button>
@@ -31,7 +37,7 @@
                 </div>
                 <div class="col">
                     <button id="zero">0</button>
-                    <button id="clr">C</button>
+                    <button id="dt">.</button>
                     <button id="eql">=</button>
                     <button id="dvd">/</button>
                 </div>
